Observed server can now start with additional custom options