@@ -27,8 +27,8 @@ public class PersistServerTest {
 
         File tmpFile = tmpFolder.newFile();
         ServerManager manager = new ServerManager(tmpFile);
-        manager.registeredServers().put("java8server", new ObservedServer("Java8Server", new File("path/to/server"), "1024MB", "2G", true, false));
-        manager.registeredServers().put("java7server", new ObservedJava7Server("Java7Server", new File("path/to/other/server/"), "2G", "4G", false, true, "256MB"));
+        manager.registeredServers().put("java8server", new ObservedServer("Java8Server", new File("path/to/server"), "1024MB", "2G", "-XX:+UseParNewGC", true, false));
+        manager.registeredServers().put("java7server", new ObservedJava7Server("Java7Server", new File("path/to/other/server/"), "4G", "8G", "-XX:+UseG1GC", false, true, "256MB"));
 
         manager = new ServerManager(tmpFile);
         ObservableMap<String, ObservedServer> registeredServers = manager.registeredServers();
@@ -41,15 +41,17 @@ public class PersistServerTest {
         assertEquals("2G", observedServerOne.getMaxMemory());
         assertTrue(observedServerOne.doAutomaticBackups());
         assertFalse(observedServerOne.doAutoRestarts());
+        assertEquals("-XX:+UseParNewGC", observedServerOne.getVmOptions());
 
         ObservedServer observedServerTwo = registeredServers.get("java7server");
         assertTrue("not an instance of ObseredJava7Server", observedServerTwo instanceof ObservedJava7Server);
         assertEquals("Java7Server", observedServerTwo.getName());
         assertEquals(new File("path/to/other/server").getAbsolutePath(), observedServerTwo.getServerFile().getAbsolutePath());
-        assertEquals("2G", observedServerTwo.getMinMemory());
-        assertEquals("4G", observedServerTwo.getMaxMemory());
+        assertEquals("4G", observedServerTwo.getMinMemory());
+        assertEquals("8G", observedServerTwo.getMaxMemory());
         assertEquals("256MB", ((ObservedJava7Server) observedServerTwo).getPermGenSize());
         assertFalse(observedServerTwo.doAutomaticBackups());
         assertTrue(observedServerTwo.doAutoRestarts());
+        assertEquals("-XX:+UseG1GC", observedServerTwo.getVmOptions());
     }
 }
